bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game_Registration__c/Padel_Game_Registration__c.object-meta.xml
<CustomObject>
    <label>Padel Game Registration</label>
    <pluralLabel>Padel Game Registrations</pluralLabel>
    <nameField>
        <displayFormat>REG-{00000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>