bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game_Registration__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <referenceTo>Padel_Game__c</referenceTo>
    <relationshipLabel>Game Registrations</relationshipLabel>
    <relationshipName>Game_Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>