bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game_Registration__c/fields/Is_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Is_Organizer__c</fullName>
    <label>Is Organizer</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>