bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game_Registration__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zapłacone</fullName>
            </value>
            <value>
                <fullName>Niezapłacone</fullName>
                <default>true</default>
                <label>Niezapłacone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>