bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game_Registration__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>Padel_Player__c</referenceTo>
    <relationshipLabel>Player Registrations</relationshipLabel>
    <relationshipName>Player_Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>