bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game_Registration__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>Registration Date</label>
    <required>true</required>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
</CustomField>