bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game_Registration__c/validationRules/Game_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Game_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Game__c)</errorConditionFormula>
    <errorDisplayField>Game__c</errorDisplayField>
    <errorMessage>Gra jest wymagana</errorMessage>
</ValidationRule>