bookingPadelApp/BookingPadelApp/force-app/main/default/objects/Padel_Game_Registration__c/validationRules/Player_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Player_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Player__c)</errorConditionFormula>
    <errorDisplayField>Player__c</errorDisplayField>
    <errorMessage>Gracz jest wymagany</errorMessage>
</ValidationRule>